--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM johanngb/rep-int:latest
-COPY --chown=docker:docker . /home/docker
-RUN runuser - docker --command='cd /home/docker/docker && R -e "rmarkdown::render(\"install.Rmd\")"'
+COPY --chown=rep:rep . /home/rep
+RUN runuser - rep --command='cd /home/rep/docker/build && make'
